# pyduke-energy

./: .gitignore  .pylintrc  README.md  example.py  realtimeExample.py  realtimeExampleKafka.py  release.sh  setup.cfg  test.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: auto-approve.yml  tests.yml
examples/: example_realtime.py  example_realtime_kafka.py  example_rest.py
src/pyduke_energy/: __init__.py  client.py  const.py  errors.py  realtime.py  types.py  utils.py
src/pydukeenergy/: __init__.py  client.py  const.py  types.py  utils.py
tests/: test_duke_energy_client.py
