[metadata]
name = pyduke-energy
version = 0.0.15
author = Michael Meli
author_email = mjmeli94@gmail.com
description = Python Wrapper for unofficial Duke Energy REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjmeli/pyduke-energy
project_urls =
    Bug Tracker = https://github.com/mjmeli/pyduke-energy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    python-dateutil
    paho-mqtt

[options.extras_require]
example =
    jsonpickle
    kafka-python
test =
    tox
    pytest~=6.2.5
    pytest-asyncio~=0.16.0
    pytest-cov~=3.0.0
    pytest-timeout~=2.0.2
    black==21.12b0
    flake8==4.0.1
    pylint==2.12.2
    pydocstyle==6.1.1
    isort~=5.10.1

[options.packages.find]
where = src