[metadata]
name = pyduke-energy
version = 1.0.5
author = Michael Meli
author_email = mjmeli94@gmail.com
description = Python Wrapper for unofficial Duke Energy REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjmeli/pyduke-energy
project_urls =
    Bug Tracker = https://github.com/mjmeli/pyduke-energy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    python-dateutil
    paho-mqtt

[options.extras_require]
example =
    jsonpickle
    kafka-python
test =
    tox
    pytest>=7.1.1,<7.3.0
    pytest-asyncio>=0.18.3,<0.21.0
    pytest-cov>=3.0,<4.1
    pytest-timeout~=2.1.0
    black==22.12.0
    flake8==5.0.4
    pylint==2.16.2
    pydocstyle==6.1.1
    isort~=5.10.1
release =
    build
    twine

[options.packages.find]
where = src
